--- a/PongExtreme/PongExtreme.vcxproj
+++ b/PongExtreme/PongExtreme.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="ObjectLoader.h">
       <FileType>CppHeader</FileType>
     </ClInclude>
+    <ClInclude Include="ShaderLoader.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TextureLoader.h" />
@@ -161,6 +162,7 @@
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="ObjectLoader.cpp" />
     <ClCompile Include="PongExtreme.cpp" />
+    <ClCompile Include="ShaderLoader.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -172,13 +174,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="Resources\Shaders\ColorFragmentShader.fragmentshader" />
-    <None Include="Resources\Shaders\StandardShading.fragmentshader" />
-    <None Include="Resources\Shaders\StandardShading.vertexshader" />
-    <None Include="Resources\Shaders\TransformVertexShader.vertexshader" />
-  </ItemGroup>
-  <ItemGroup>
-    <Image Include="Resources\Bitmaps\mandrill.bmp" />
+    <None Include="resources\shaders\ColorFragmentShader.fragmentshader" />
+    <None Include="resources\shaders\StandardShading.fragmentshader" />
+    <None Include="resources\shaders\StandardShading.vertexshader" />
+    <None Include="resources\shaders\TransformVertexShader.vertexshader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
