--- a/PongExtreme/PongExtreme.vcxproj
+++ b/PongExtreme/PongExtreme.vcxproj
@@ -148,6 +148,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Ball.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="LeftBar.h" />
@@ -156,13 +157,17 @@
     </ClInclude>
     <ClInclude Include="RightBar.h" />
     <ClInclude Include="ShaderLoader.h" />
+    <ClInclude Include="Sphere.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TextureLoader.h" />
+    <ClInclude Include="ThreeDimensional.h" />
     <ClInclude Include="ThreeDimensionalObject.h" />
     <ClInclude Include="Triangle.h" />
+    <ClInclude Include="Vao.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Cube.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="LeftBar.cpp" />
@@ -170,6 +175,7 @@
     <ClCompile Include="PongExtreme.cpp" />
     <ClCompile Include="RightBar.cpp" />
     <ClCompile Include="ShaderLoader.cpp" />
+    <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -177,6 +183,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="TextureLoader.cpp" />
+    <ClCompile Include="ThreeDimensional.cpp" />
     <ClCompile Include="ThreeDimensionalObject.cpp" />
     <ClCompile Include="Triangle.cpp" />
   </ItemGroup>
