--- a/PongExtreme/PongExtreme.vcxproj
+++ b/PongExtreme/PongExtreme.vcxproj
@@ -163,6 +163,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Arena.h" />
+    <ClInclude Include="Texture.h" />
     <ClInclude Include="TextureLoader.h" />
     <ClInclude Include="ThreeDimensional.h" />
     <ClInclude Include="ThreeDimensionalObject.h" />
@@ -188,6 +189,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Arena.cpp" />
+    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TextureLoader.cpp" />
     <ClCompile Include="ThreeDimensional.cpp" />
     <ClCompile Include="ThreeDimensionalObject.cpp" />
