--- a/PongExtreme/PongExtreme.vcxproj
+++ b/PongExtreme/PongExtreme.vcxproj
@@ -149,9 +149,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h" />
-    <ClInclude Include="Cube.h" />
+    <ClInclude Include="Floor.h" />
     <ClInclude Include="Game.h" />
-    <ClInclude Include="Lamp.h" />
     <ClInclude Include="LeftBar.h" />
     <ClInclude Include="ObjectDefinition.h" />
     <ClInclude Include="ObjectLoader.h">
@@ -159,29 +158,25 @@
     </ClInclude>
     <ClInclude Include="RightBar.h" />
     <ClInclude Include="ShaderLoader.h" />
-    <ClInclude Include="Sphere.h" />
     <ClInclude Include="stdafx.h" />
+    <ClInclude Include="Tao.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Arena.h" />
-    <ClInclude Include="Texture.h" />
     <ClInclude Include="TextureLoader.h" />
     <ClInclude Include="ThreeDimensional.h" />
     <ClInclude Include="ThreeDimensionalObject.h" />
-    <ClInclude Include="Triangle.h" />
     <ClInclude Include="Vao.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ball.cpp" />
-    <ClCompile Include="Cube.cpp" />
+    <ClCompile Include="Floor.cpp" />
     <ClCompile Include="Game.cpp" />
-    <ClCompile Include="Lamp.cpp" />
     <ClCompile Include="LeftBar.cpp" />
     <ClCompile Include="ObjectDefinition.cpp" />
     <ClCompile Include="ObjectLoader.cpp" />
     <ClCompile Include="PongExtreme.cpp" />
     <ClCompile Include="RightBar.cpp" />
     <ClCompile Include="ShaderLoader.cpp" />
-    <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -189,11 +184,9 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Arena.cpp" />
-    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="TextureLoader.cpp" />
     <ClCompile Include="ThreeDimensional.cpp" />
     <ClCompile Include="ThreeDimensionalObject.cpp" />
-    <ClCompile Include="Triangle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
