--- a/PongExtreme/PongExtreme.vcxproj
+++ b/PongExtreme/PongExtreme.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="ObjectLoader.h">
       <FileType>CppHeader</FileType>
     </ClInclude>
+    <ClInclude Include="BoundingBox.h" />
     <ClInclude Include="RightBar.h" />
     <ClInclude Include="ShaderLoader.h" />
     <ClInclude Include="stdafx.h" />
@@ -163,7 +164,7 @@
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Arena.h" />
     <ClInclude Include="TextureLoader.h" />
-    <ClInclude Include="ThreeDimensional.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="ThreeDimensionalObject.h" />
     <ClInclude Include="Vao.h" />
   </ItemGroup>
@@ -174,6 +175,7 @@
     <ClCompile Include="LeftBar.cpp" />
     <ClCompile Include="ObjectDefinition.cpp" />
     <ClCompile Include="ObjectLoader.cpp" />
+    <ClCompile Include="BoundingBox.cpp" />
     <ClCompile Include="PongExtreme.cpp" />
     <ClCompile Include="RightBar.cpp" />
     <ClCompile Include="ShaderLoader.cpp" />
@@ -185,7 +187,7 @@
     </ClCompile>
     <ClCompile Include="Arena.cpp" />
     <ClCompile Include="TextureLoader.cpp" />
-    <ClCompile Include="ThreeDimensional.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="ThreeDimensionalObject.cpp" />
   </ItemGroup>
   <ItemGroup>
