--- a/PongExtreme/PongExtreme.vcxproj
+++ b/PongExtreme/PongExtreme.vcxproj
@@ -148,6 +148,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ArenaBoundaryBottom.h" />
+    <ClInclude Include="ArenaBoundaryLeft.h" />
+    <ClInclude Include="ArenaBoundaryRight.h" />
+    <ClInclude Include="ArenaBoundaryTop.h" />
     <ClInclude Include="Ball.h" />
     <ClInclude Include="Floor.h" />
     <ClInclude Include="Game.h" />
@@ -162,13 +166,16 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="Tao.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="Arena.h" />
     <ClInclude Include="TextureLoader.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="ThreeDimensionalObject.h" />
     <ClInclude Include="Vao.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ArenaBoundaryBottom.cpp" />
+    <ClCompile Include="ArenaBoundaryLeft.cpp" />
+    <ClCompile Include="ArenaBoundaryRight.cpp" />
+    <ClCompile Include="ArenaBoundaryTop.cpp" />
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Floor.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -185,7 +192,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Arena.cpp" />
     <ClCompile Include="TextureLoader.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="ThreeDimensionalObject.cpp" />
