--- a/PongExtreme/PongExtreme.vcxproj.filters
+++ b/PongExtreme/PongExtreme.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="ArenaBoundaryLeft.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="WaveSound.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -135,6 +138,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ArenaBoundaryLeft.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="WaveSound.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
