resource files are now copied on build of project

--- a/PongExtreme/PongExtreme.vcxproj.filters
+++ b/PongExtreme/PongExtreme.vcxproj.filters
@@ -13,12 +13,6 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Resource Files\shaders">
-      <UniqueIdentifier>{faef907b-7dde-4754-b592-dc87833a7f1d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Resource Files\objects">
-      <UniqueIdentifier>{cdb1e56c-63d3-4503-844e-554c1d833ea7}</UniqueIdentifier>
-    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -84,6 +78,9 @@
     <ClInclude Include="WaveSound.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -146,23 +143,5 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="resources\shaders\ColorFragmentShader.fragmentshader">
-      <Filter>Resource Files\shaders</Filter>
-    </None>
-    <None Include="resources\shaders\StandardShading.fragmentshader">
-      <Filter>Resource Files\shaders</Filter>
-    </None>
-    <None Include="resources\shaders\StandardShading.vertexshader">
-      <Filter>Resource Files\shaders</Filter>
-    </None>
-    <None Include="resources\shaders\TransformVertexShader.vertexshader">
-      <Filter>Resource Files\shaders</Filter>
-    </None>
-    <None Include="resources\shaders\SimpleFragmentShader.fragmentshader">
-      <Filter>Resource Files\shaders</Filter>
-    </None>
-    <None Include="resources\shaders\SimpleVertexShader.vertexshader">
-      <Filter>Resource Files\shaders</Filter>
-    </None>
   </ItemGroup>
 </Project>
