--- a/PongExtreme/PongExtreme.vcxproj
+++ b/PongExtreme/PongExtreme.vcxproj
@@ -128,6 +128,9 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PostBuildEvent>
+      <Command>xcopy "$(ProjectDir)resources" "$(TargetDir)resources" /e /i /y</Command>
+    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -157,10 +160,9 @@
     <ClInclude Include="Game.h" />
     <ClInclude Include="LeftBar.h" />
     <ClInclude Include="ObjectDefinition.h" />
-    <ClInclude Include="ObjectLoader.h">
-      <FileType>CppHeader</FileType>
-    </ClInclude>
+    <ClInclude Include="ObjectLoader.h" />
     <ClInclude Include="BoundingBox.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="RightBar.h" />
     <ClInclude Include="ShaderLoader.h" />
     <ClInclude Include="stdafx.h" />
@@ -200,12 +202,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="resources\shaders\ColorFragmentShader.fragmentshader" />
-    <None Include="resources\shaders\SimpleFragmentShader.fragmentshader" />
-    <None Include="resources\shaders\SimpleVertexShader.vertexshader" />
-    <None Include="resources\shaders\StandardShading.fragmentshader" />
-    <None Include="resources\shaders\StandardShading.vertexshader" />
-    <None Include="resources\shaders\TransformVertexShader.vertexshader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
