--- a/PongExtreme/PongExtreme.vcxproj.filters
+++ b/PongExtreme/PongExtreme.vcxproj.filters
@@ -78,10 +78,10 @@
     <ClInclude Include="WaveSound.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="resource.h">
+    <ClInclude Include="NumberLeft.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Text.h">
+    <ClInclude Include="NumberRight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -143,7 +143,10 @@
     <ClCompile Include="WaveSound.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Text.cpp">
+    <ClCompile Include="NumberLeft.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="NumberRight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
